--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,22 @@
-[tool.poetry]
+[project]
 name = "profile-extraction-chatbot"
 version = "0.1.0"
 description = "AI chatbot that extracts user profile information based on a conversation."
-authors = ["\"Alin Mihaila\" <\"alin.mh996@gmail.com\">"]
+authors = []
 license = "MIT"
-readme = "README.md"
-packages = [
-    { include = "profile_extraction_chatbot", from = "src" }
+requires-python = ">=3.12"
+dependencies = [
+    "fastapi>=0.115.6",
+    "pydantic-ai>=0.0.9",
+    "uvicorn>=0.32.1",
+    "websockets>=14.1",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-fastapi = "^0.115.6"
-uvicorn = "^0.32.1"
-websockets = "^14.1"
-pydantic-ai = "^0.0.8"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.8.1"
+[dependency-groups]
+dev = [
+    "ruff>=0.8.2",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
